--- a/HTML/Sample.html
+++ b/HTML/Sample.html
@@ -16,6 +16,14 @@
             <li> gowri shankar theatre </li>
         </ul>
         <marquee direction = "right"> salem is famous for mangoes  </marquee>  
+        <h1>
+            <b> Lorem ipsum</b> <i>dolor sit amet </i>consectetur adipisi
+        </h1>
+        <h3>
+            
+          <p >sed qui. Illum vitae laboriosam rerum eum
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam aspernatur repellendus perferendis odio,</p>
+          </h3>
         <img src = image 1.png  alt =" yercaud hills"/> 
         <br>
         <br>
@@ -35,9 +43,5 @@
         click here to go <a href="https:gmail.com" mailto="sahasahana304@gmail.com" target ="_blank"> mail</a>  <br> 
          click here to go <a href="https:google.com" target ="_blank"> Google </a>
          </h4>
-        
-
-
-
     </body>
  </html>
