--- a/HTML/Sample.html
+++ b/HTML/Sample.html
@@ -24,24 +24,25 @@
           <p >sed qui. Illum vitae laboriosam rerum eum
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam aspernatur repellendus perferendis odio,</p>
           </h3>
-        <img src = image 1.png  alt =" yercaud hills"/> 
+        <img src ="../MyFiles/image 1.png.jpeg" width="400px"  alt =" yercaud hills"/> 
         <br>
         <br>
         <audio controls>
-            <source src = "my data\music.mp3" />
+            <source src = "../MyFiles/music.mp3.mp3" />
         </audio>
         <br>
         <br>
-        <video controls>
-            <source src = "video.mp4" />
+        <video controls src="../MyFiles/Ek-tu-hi-yaar-mera-video-song.mp4">
+           
         </video>
         <br><br>
         <hr>
-        <h1 align = center >WELCOME TO ANCHOR TAG </h1>
+        <h1 align = "center" >WELCOME TO ANCHOR TAG </h1>
         <a>
         <h4>click here to go <a href="https://linkedin.com" target ="_balnk"> Linkendin </a><br>
-        click here to go <a href="https:gmail.com" mailto="sahasahana304@gmail.com" target ="_blank"> mail</a>  <br> 
+        click here to go <a  href="mailto:sahasahana304@gmail.com" target ="_blank"> mail</a>  <br> 
          click here to go <a href="https:google.com" target ="_blank"> Google </a>
+         <a href="tel:+91 9789355930">Contact</a>
          </h4>
     </body>
  </html>
